# eyes-on-claude-code

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  claude-monitor-hook  claude-monitor-settings.json  claude-monitor-watch  eocc-hook  eocc-settings.json  eocc-watch  eslint.config.js  index.html  install.sh  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: frontend-lint.yml  lint.yml  release.yml  rust-lint.yml
ClaudeMonitor/: Package.swift
app/: package.json  tailwind.config.js
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
claude-monitor-tauri/: index.html  package-lock.json  package.json  pnpm-lock.yaml
claude-monitor-tauri/src/: App.tsx  index.css  index.html
claude-monitor-tauri/src-tauri/: Cargo.toml  tauri.conf.json
docs/: macos-notarization-setup.md
scripts/: audit-licenses.mjs  generate-icons.sh  setup-macos-codesign.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  difit.rs  events.rs  git.rs  main.rs  menu.rs  persist.rs  settings.rs  setup.rs  state.rs  tmux.rs
src/components/: DiffButton.tsx  Header.tsx  SessionCard.tsx  SessionList.tsx  SetupModal.tsx  TmuxPanel.tsx  TmuxViewer.tsx  icons.tsx
src/context/: AppContext.tsx  appContextStore.ts  useAppContext.ts
src/hooks/: useWindowDrag.ts
src/lib/: audio.ts  tauri.ts  utils.ts
src/types/: index.ts
(+48 files in other folders)
