[package]
name = "eyes-on-claude-code"
version = "1.0.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api", "webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
opener = "0.8"
anyhow = "1"
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
